<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/group" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/iv_logo"
                    android:text="@string/hypertrack"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/iv_logo"
                    android:text="@string/login_header"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/button_marginBottom"
            android:layout_marginLeft="@dimen/button_marginLeft"
            android:layout_marginRight="@dimen/button_marginRight"
            android:background="@drawable/button_cornered"
            android:backgroundTint="@color/text_color"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/normalText_sp_14"
            android:textStyle="bold" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>